--- a/pages/workshopService.html
+++ b/pages/workshopService.html
@@ -29,98 +29,98 @@
           <button onclick="showServicesMov(1)" type="button" class="btn btn-light shadow-lg">Servicios</button>
         </div>
         <div id="carouselExample" class="carousel slide carouselTall">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <article class="reserve-box shadow-lg p-3 mb-5 bg-body rounded">
-                <div class="dayOfWeek">
-                  <h2>Lunes</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
-                </div>
-
-                <div class="dayOfWeek">
-                  <h2>Martes</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
-                </div>
-
-                <div class="dayOfWeek">
-                  <h2>Miércoles</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
-                </div>
-
-                <div class="dayOfWeek">
-                  <h2>Jueves</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
-                </div>
-
-                <div class="dayOfWeek">
-                  <h2>Viernes</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
-                </div>
-              </article></article>
-            </div>
-            <div class="carousel-item">
-              <article class="reserve-box shadow-lg p-3 mb-5 bg-body rounded">
-                <div class="dayOfWeek">
-                  <h2>Lunes</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
-                </div>
-
-                <div class="dayOfWeek">
-                  <h2>Martes</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
-                </div>
-
-                <div class="dayOfWeek">
-                  <h2>Miércoles</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
-                </div>
-
-                <div class="dayOfWeek">
-                  <h2>Jueves</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
-                </div>
-
-                <div class="dayOfWeek">
-                  <h2>Viernes</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
-                </div>
-              </article></article>
-            </div>
-            <div class="carousel-item">
-              <article class="reserve-box shadow-lg p-3 mb-5 bg-body rounded">
-                <div class="dayOfWeek">
-                  <h2>Lunes</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
-                </div>
-
-                <div class="dayOfWeek">
-                  <h2>Martes</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
-                </div>
-
-                <div class="dayOfWeek">
-                  <h2>Miércoles</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
-                </div>
-
-                <div class="dayOfWeek">
-                  <h2>Jueves</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
-                </div>
-
-                <div class="dayOfWeek">
-                  <h2>Viernes</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
-                </div>
-              </article></article>
-            </div>
-          </div>
           <div class="control-btn">
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <button class="carousel-control-prev cp" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
               <span class="carousel-control-prev-icon btn-reserve" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <article class="reserve-box shadow-lg p-3 mb-5 bg-body rounded">
+                  <div class="dayOfWeek">
+                    <h2>Lunes</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
+
+                  <div class="dayOfWeek">
+                    <h2>Martes</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
+
+                  <div class="dayOfWeek">
+                    <h2>Miércoles</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
+
+                  <div class="dayOfWeek">
+                    <h2>Jueves</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
+
+                  <div class="dayOfWeek">
+                    <h2>Viernes</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
+                </article></article>
+              </div>
+              <div class="carousel-item">
+                <article class="reserve-box shadow-lg p-3 mb-5 bg-body rounded">
+                  <div class="dayOfWeek">
+                    <h2>Lunes</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
+
+                  <div class="dayOfWeek">
+                    <h2>Martes</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
+
+                  <div class="dayOfWeek">
+                    <h2>Miércoles</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
+
+                  <div class="dayOfWeek">
+                    <h2>Jueves</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
+
+                  <div class="dayOfWeek">
+                    <h2>Viernes</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
+                </article></article>
+              </div>
+              <div class="carousel-item">
+                <article class="reserve-box shadow-lg p-3 mb-5 bg-body rounded">
+                  <div class="dayOfWeek">
+                    <h2>Lunes</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
+
+                  <div class="dayOfWeek">
+                    <h2>Martes</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
+
+                  <div class="dayOfWeek">
+                    <h2>Miércoles</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
+
+                  <div class="dayOfWeek">
+                    <h2>Jueves</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
+
+                  <div class="dayOfWeek">
+                    <h2>Viernes</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
+                </article></article>
+              </div>
+            </div>
+            <button class="carousel-control-next cn" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
               <span class="carousel-control-next-icon btn-reserve" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
