Versión 45. Añadiendo enlace Mi BP y ajustando diseño de reservas en móvil.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
             </div>
           </div>
           <h2>¡ASÍ DE FÁCIL!</h2>
-
+          <div class="btn-color">
+            <a class="btn" href="https://mibp.es/es/welcome/como-funciona">
+              ¡Accede a Mi BP!
+            </a>
+          </div>
         </div>
         <div class="image-bp_card"></div>
       </div>
