--- a/pages/workshopService.html
+++ b/pages/workshopService.html
@@ -28,89 +28,119 @@
         <div class="aside-mov" >
           <button onclick="showServicesMov(1)" type="button" class="btn btn-light shadow-lg">Servicios</button>
         </div>
-        <div id="carouselExample" class="carousel slide carouselTall">
+        <div id="carouselExample" class="carousel slide carouselTall carousel-dark">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <article class="reserve-box shadow-lg p-3 mb-5 bg-body rounded">
                 <div class="dayOfWeek">
-                  <h2>Lunes</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
+                  <div class="dayOfWeekTitle">
+                    <h2>Lunes</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
                 </div>
 
                 <div class="dayOfWeek">
-                  <h2>Martes</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
+                  <div class="dayOfWeekTitle">
+                    <h2>Martes</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
                 </div>
 
                 <div class="dayOfWeek">
-                  <h2>Miércoles</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
+                  <div class="dayOfWeekTitle">
+                    <h2>Miércoles</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
                 </div>
 
                 <div class="dayOfWeek">
-                  <h2>Jueves</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
+                  <div class="dayOfWeekTitle">
+                    <h2>Jueves</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
                 </div>
 
                 <div class="dayOfWeek">
-                  <h2>Viernes</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
+                  <div class="dayOfWeekTitle">
+                    <h2>Viernes</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
                 </div>
               </article></article>
             </div>
             <div class="carousel-item">
               <article class="reserve-box shadow-lg p-3 mb-5 bg-body rounded">
                 <div class="dayOfWeek">
-                  <h2>Lunes</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
+                  <div class="dayOfWeekTitle">
+                    <h2>Lunes</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
                 </div>
 
                 <div class="dayOfWeek">
-                  <h2>Martes</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
+                  <div class="dayOfWeekTitle">
+                    <h2>Martes</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
                 </div>
 
                 <div class="dayOfWeek">
-                  <h2>Miércoles</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
+                  <div class="dayOfWeekTitle">
+                    <h2>Miércoles</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
                 </div>
 
                 <div class="dayOfWeek">
-                  <h2>Jueves</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
+                  <div class="dayOfWeekTitle">
+                    <h2>Jueves</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
                 </div>
 
                 <div class="dayOfWeek">
-                  <h2>Viernes</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
+                  <div class="dayOfWeekTitle">
+                    <h2>Viernes</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
                 </div>
               </article></article>
             </div>
             <div class="carousel-item">
               <article class="reserve-box shadow-lg p-3 mb-5 bg-body rounded">
                 <div class="dayOfWeek">
-                  <h2>Lunes</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
+                  <div class="dayOfWeekTitle">
+                    <h2>Lunes</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
                 </div>
 
                 <div class="dayOfWeek">
-                  <h2>Martes</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
+                  <div class="dayOfWeekTitle">
+                    <h2>Martes</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
                 </div>
 
                 <div class="dayOfWeek">
-                  <h2>Miércoles</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
+                  <div class="dayOfWeekTitle">
+                    <h2>Miércoles</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
                 </div>
 
                 <div class="dayOfWeek">
-                  <h2>Jueves</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
+                  <div class="dayOfWeekTitle">
+                    <h2>Jueves</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
                 </div>
 
                 <div class="dayOfWeek">
-                  <h2>Viernes</h2>
-                  <p class="date">Fecha: aaaa-mm-dd</p>
+                  <div class="dayOfWeekTitle">
+                    <h2>Viernes</h2>
+                    <p class="date">Fecha: aaaa-mm-dd</p>
+                  </div>
                 </div>
               </article></article>
             </div>
