--- a/pages/workshopService.html
+++ b/pages/workshopService.html
@@ -159,7 +159,7 @@
     </div>
 
 
-    <div id="btn-reserve" class="btn-color">
+    <div id="btn-reserve" class="btn-color" onclick="reservarServicio()">
       <a ref="" class="btn">Reservar</a>
     </div>
 
