--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -2,12 +2,12 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>BP Santa Brígida</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/PWM-TEMPLATES/img/templatebox.png">
+    <link rel="shortcut icon" href="/PWM-TEMPLATES/img/LOGO.png">
     <link rel="stylesheet" type="text/css" href="\PWM-TEMPLATES\css\main.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
   <body>
     <div class="register-login-form">
@@ -15,9 +15,16 @@
         <img class="imgUser" src="/PWM-TEMPLATES/img/LOGO.png">
         <h2>Regístrate</h2>
         <input required  id="nombreCompleto" class="shadow-lg" type="text" placeholder="Nombre completo">
-        <input required pattern="^[^@]+@[^@]+\.[a-zA-Z]{2,}$"  id="correoElectronico" class="shadow-lg" type="email" placeholder="Correo electrónico">
-        <input required  minlength="6" maxlength="9"  id="contrasena"  class="shadow-lg" type="password" placeholder="Contraseña">
-        <input required  minlength="6" maxlength="9" id="repetirContrasena" class="shadow-lg" type="password" placeholder="Repetir Contraseña">
+
+        <input required pattern="^[^@]+@[^@]+\.[a-zA-Z]{2,}$"  id="correoElectronico" class="shadow-lg" type="email"
+               placeholder="Correo electrónico">
+
+        <input required  minlength="6" maxlength="9"  id="contrasena"  class="shadow-lg" type="password"
+               placeholder="Contraseña">
+
+        <input required  minlength="6" maxlength="9" id="repetirContrasena" class="shadow-lg" type="password"
+               placeholder="Repetir Contraseña">
+
         <button type="submit" value="Submit" class="button" >Registrate</button>
 
         <p>Al registrarte, aceptas nuestras Condiciones, la Política de datos y la Política de cookies.</p>
@@ -26,7 +33,9 @@
         <a href="\PWM-TEMPLATES\pages\signIn.html" >¿Ya tienes una cuenta? Inicia Sesion</a>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+    </script>
     <script src="/PWM-TEMPLATES/js/main.js"></script>
   </body>
 </html>
