--- a/pages/signIn.html
+++ b/pages/signIn.html
@@ -14,9 +14,9 @@
       <form class="shadow-lg">
         <img class="imgUser" src="/PWM-TEMPLATES/img/LOGO.png">
         <h2>Inicia Sesion</h2>
-        <input required pattern="^[^@]+@[^@]+\.[a-zA-Z]{2,}$"  class="shadow-lg"  type="email" placeholder="Correo electrónico">
-        <input required  minlength="6" maxlength="9" class="shadow-lg"  type="password" placeholder="Contraseña">
-        <button type="submit" value="Submit" class="button" >Iniciar Sesion</button>
+        <input id="email" required pattern="^[^@]+@[^@]+\.[a-zA-Z]{2,}$"  class="shadow-lg"  type="email" placeholder="Correo electrónico">
+        <input id="contrasena" required  minlength="6" maxlength="9" class="shadow-lg"  type="password" placeholder="Contraseña">
+        <button type="submit" value="Submit" class="button" onclick="loggin()" >Iniciar Sesion</button>
         <br>
         <br>
         <a href="#"> ¿Has olvidado la contraseña? </a>
@@ -28,5 +28,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
     </script>
+    <script src="/PWM-TEMPLATES/js/main.js"></script>
   </body>
 </html>
