Versión 51. Cargando contenido del json al carousel del home

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="\PWM-TEMPLATES\css\main.css">
   </head>
-  <body onload="loadComponenHome();loadPresentation()">
+  <body onload="loadComponenHome();loadPresentation();loadCarouselImages()">
     <div id="loading">
       <img id="loading-image" src="/PWM-TEMPLATES/img/LOGO.png" alt="Loading..." />
       <div class="spinner"></div>
