Versión 58. Funcionalidades de logout

--- a/pages/dashboard/dashboardUser.html
+++ b/pages/dashboard/dashboardUser.html
@@ -115,6 +115,9 @@
     <div  class="eliminate">
       <a ref="" id = "btnEliminarCuenta" class="btn">Eliminar cuenta</a>
     </div>
+    <div  class="eliminate">
+      <a onclick="logout()" class="btn">Cerrar sesión</a>
+    </div>
     <footer class="footer-store" id="footer"></footer>
   </section>
 </main>
@@ -130,5 +133,6 @@
   $(function (){$('#footer').load("/PWM-TEMPLATES/component/footer.html")});
   $(function (){$('#header').load("/PWM-TEMPLATES/component/headerLog.html")});
 </script>
+<script src="/PWM-TEMPLATES/js/main.js"></script>
 </body>
 </html>
