--- a/pages/dashboard/dashboardAdmin.html
+++ b/pages/dashboard/dashboardAdmin.html
@@ -102,10 +102,13 @@
 
 
 
-
+    <div  class="eliminate">
+      <a onclick="logout()" class="btn">Cerrar sesión</a>
+    </div>
 
     <footer class="footer-store" id="footer"></footer>
   </section>
+
 </main>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
