Versión 61. Reservar Servicio Solo lOG

--- a/pages/workshopService.html
+++ b/pages/workshopService.html
@@ -54,7 +54,7 @@
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content modal-content-service">
           <div class="modal-body">
             <form>
               <div class="mb-3">
