--- a/pages/signIn.html
+++ b/pages/signIn.html
@@ -11,12 +11,12 @@
   </head>
   <body>
     <div class="register-login-form">
-      <form class="shadow-lg">
+      <form class="shadow-lg" onsubmit="loggin()">
         <img class="imgUser" src="/PWM-TEMPLATES/img/LOGO.png">
         <h2>Inicia Sesion</h2>
         <input id="email" required pattern="^[^@]+@[^@]+\.[a-zA-Z]{2,}$"  class="shadow-lg"  type="email" placeholder="Correo electrónico">
         <input id="contrasena" required  minlength="6" maxlength="9" class="shadow-lg"  type="password" placeholder="Contraseña">
-        <button type="submit" value="Submit" class="button" onclick="loggin()" >Iniciar Sesion</button>
+        <button type="submit" value="Submit" class="button" >Iniciar Sesion</button>
         <br>
         <br>
         <a href="#"> ¿Has olvidado la contraseña? </a>
