Versión FF. Añadido responsive del dashboard del user

--- a/pages/dashboard/dashboardUser.html
+++ b/pages/dashboard/dashboardUser.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="/PWM-TEMPLATES/img/LOGO.png">
   <link rel="stylesheet" type="text/css" href="\PWM-TEMPLATES\css\main.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -77,7 +78,7 @@
 
 
 
-  <section class="products">
+  <section class="products" id="Profile">
     <h1>Tu perfil</h1>
     <hr>
     <div class="profile">
@@ -116,7 +117,7 @@
       <a ref="" id = "btnEliminarCuenta" class="btn">Eliminar cuenta</a>
     </div>
     <div  class="eliminate">
-      <a onclick="logout()" class="btn">Cerrar sesión</a>
+      <a onclick="logout()" id= "btnCerrarSesion" class="btn">Cerrar sesión</a>
     </div>
     <footer class="footer-store" id="footer"></footer>
   </section>
